fix css overflow and script structure

--- a/.css/main.css
+++ b/.css/main.css
@@ -155,6 +155,7 @@ max-height: 240px;
 #page {
    min-height:100%;
    position:relative;
+   overflow:hidden;
 }
 
 #content {
@@ -169,4 +170,12 @@ max-height: 240px;
 	border-left:1px solid grey; 
 	border-right:1px solid grey;
 	overflow:hidden;
+}
+
+#links {
+	margin:0 auto;
+	width:92%;
+	padding:1% 0 1%;
+        border-top:1px solid grey;
+        border-bottom:1px solid grey;
 }
